# Programming-Challenges

./: README.md
Kaprekar_Numbers/: Solution.java  problem_description.txt
a_very_big_sum/: CMakeLists.txt  sum.cpp
amazon_questions/: AWS_KMS_I2.txt
apple_orange/: .apple_orange.rs.swp  apple_orange.rs
b_tree/: Makefile  b_tree.c  b_tree.h
clock/: Makefile  clock.c  clock.h
cracking_the_codeing_interview/array_rotate/: array_left_rotation.py
cracking_the_codeing_interview/balanced_brackets/: balanced_brackets.py
cracking_the_codeing_interview/bubble_sort/: bubble_sort.py
cracking_the_codeing_interview/character_trie/: character_trie.py
cracking_the_codeing_interview/ice_cream_parlor/: explanation.txt  ice_cream_parlor.py
cracking_the_codeing_interview/is_binary_search_tree/: is_binary_search_tree.py
cracking_the_codeing_interview/making_anagrams/: making_anagrams.py
cracking_the_codeing_interview/merge_sort/: .cc.crd  CMakeLists.txt  merge_sort.c
crypto_pals/set_1/: BaseConverter.py  main.py  (+1 more)
diagonal-difference/: diagonal-difference  diagonal-difference.rs
divisible_sum_pairs/: CMakeLists.txt  divisible_sum_pairs.cpp
french_fries/: french_fries.py
funny_strings/: funny_strings  funny_strings.rs  test_3.in  test_3.out  test_9.out
hash_map/: HashMap.java
is_fibo/: CMakeLists.txt  is_fibo.cpp
kaprekar_numbers/: CMakeLists.txt  kaprekar_numbers.cpp
lines/: Makefile  lines.c  lines.h
matrix_encryption/: CMakeLists.txt  matrix_encryption.cpp
maximum_subarray/: CMakeLists.txt  maximum_subarray.cpp
missing_numbers/: .~lock.missing_numbers.cpp#  CMakeLists.txt  missing_numbers.cpp
most_common_subnet/: CMakeLists.txt  most_common_subnet.cpp
most_common_words/: CMakeLists.txt  most_common_word.cpp
nth_deg_separation/: AWS_KMS_I2.txt  meetup_notes.txt  nth_sep.py
pangrams/: CMakeLists.txt  pangrams.c
plus-minus/: CMakeLists.txt  plus-minus.cpp
reverse_string/: CMakeLists.txt  reverse_string.cpp
rust_template/: template  template.rs
secrative_submarine/: aes_cbc_cipher.py  analyze.py  submarine.py
shortest_reach/: CMakeLists.txt  shortest_reach.cpp
spring/: build.gradle
star_craze/: CMakeLists.txt  star_craze.cpp
the_power_sum/: the_power_sum.py
weighted_uniform_strings/: CMakeLists.txt  test.out  test2.out  weighted_uniform_strings.cpp
what_time_is_it/: CMakeLists.txt  main.cpp
(+16 files in other folders)
